--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
       <artifactId>netty-all</artifactId>
       <version>4.1.15.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
 
   </dependencies>
 </project>
