--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,17 @@
       <version>4.12</version>
     </dependency>
 
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.bbk.im</groupId>
+      <artifactId>tlv</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
   </dependencies>
 </project>
